--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/bauerca/jsxlatify#readme",
   "dependencies": {
+    "browserify-transform-tools": "^1.5.0",
     "jsxlate": "^0.3.1",
     "jsxlate-loader": "^0.3.2"
   },
